emc2 (1:2.3.2~pre) hardy; urgency=low

  * classicladder:Fix crash from clicking on comparison objects
  * halshow: fix overlap of pin name and value with long values
  * calibration now works with hostmot2-style hal files
  * documentation improvements
  * documentation: fix User Manual menu item
  * configure: fix obscure error 'source: not found'
  * configure: check that tk and Tkinter
  * configure: fix truncated output on some systems
  * After an abort, DTG and velocity will now show as 0
  * axis: improve max velocity slider default maximum for machines with rotary
    axes
  * axis: when showing machine position, do not include TLO
  * update CoolTool config files
  * stepconf: Fix second and third parport direction settings (in/out)
    not following the user request.
  * Increase the HAL shared memory area.  This fixes problems loading complex
    configurations, such as those that use two mesa cards
  * in AXIS, machine position no longer incorrectly shows the tool offset
  * in AXIS, use [TRAJ]MAX_LINEAR_VELOCITY for the top end of the max velocity
    slider, instead of [TRAJ]MAX_VELOCITY which is inappropriate for machines
    with some linear and some rotary axes.
  * hm2 stepgen .position-fb now has sub-step resolution (like the sw stepgen)
  * hm2 stepgen now supports maxaccel=0, useful when a nice trajectory
    planner manages your acceleration for you
  * hm2 stepgen now supports velocity mode
  * hm2: new firmware 5i20/SVST2_4_7I47 (2 encoder + 1 pwm + 4 stepgen on one
    header)
  * bugfix: the hm2-servo sample config now honors INPUT_SCALE and
    OUTPUT_SCALE from the .ini
  * bugfix: much lower following error for the hm2 stepgen
  * bugfix: hm2 encoder now honors .reset even when no encoder edges are
    coming in
  * bugfix: (minor) the hm2 driver now uses double instead of hal_float_t
    for internal temporary variables
  * axis: fix a bug that made axis lock up when clicking the "show hidden
    files" checkbox in the Open dialog 
