@@ -23,8 +23,13 @@
 .SH NAME
 pyvcp \- Virtual Control Panel for EMC2
 .SH SYNOPSIS
-\fBpyvcp\fR [-c \fIcomponent-name\fR] \fImyfile.xml\fR
+\fBpyvcp\fR [-g \fIWxH+X+Y\fR] [-c \fIcomponent-name\fR] \fImyfile.xml\fR
 .SH OPTIONS
+.TP
+\fB-g\fR \fIWxH+X+Y\fR
+This sets the initial geometry of the root window.
+Use 'WxH' for just size, '+X+Y' for just position, or 'WxH+X+Y' for both.
+Size / position use pixel units. Position is referenced from top left.
 .TP
 \fB-c\fR \fIcomponent-name\fR
 Use \fIcomponent-name\fR as the HAL component name.  If the component name is
